Added a confirmation message about not collecting data and updated README

--- a/sign-in.html
+++ b/sign-in.html
@@ -21,8 +21,9 @@
         <!-- NavBar Ends -->
          <div class="content">
             <h1>Sign In</h1>
+            <div class="confirmation">* This is just a demo form. We don't collect any data from visitors.</div>
             <form>
-                <input class="main-input" type="text" name="email" id="email" placeholder="Email or Mobile Number" required>
+              <input class="main-input" type="text" name="email" id="email" placeholder="Email or Mobile Number" required>
 
                 <input class="main-input" type="password" name="password" id="password" placeholder="Password" required>
 
